--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ html {
   background-color: #c9b5ab;
   font-family: "PT Sans", sans-serif;
   line-height: 1.5;
+  color: #222;
 }
 
 h1 {
@@ -39,10 +40,24 @@ main {
 }
 
 main > p:nth-of-type(1) {
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+main > blockquote > p {
   font-size: 1.5rem;
   font-weight: bold;
 }
 
-main > p:nth-of-type(2) ~ b {
-  font-weight: bold;
+main > blockquote > cite {
+  font-size: 0.8rem;
+  font-weight: normal;
+}
+
+h2 {
+  font-family: "PT Sans", sans-serif;
+  color: #3f1622;
+}
+
+ol > li {
+  list-style-type: lower-greek;
 }
