--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ main > p:nth-of-type(1) {
   font-size: 1.125rem;
   font-weight: bold;
 }
+
 main > blockquote > p {
   font-size: 1.5rem;
   font-weight: bold;
@@ -52,7 +53,7 @@ main > blockquote > p {
 }
 
 main > blockquote > cite {
-  font-size: 0.8rem;
+  font-size: .8rem;
   font-weight: normal;
 }
 
@@ -72,13 +73,13 @@ dl > dt {
 
 ul > li {
   list-style-type: circle;
-  font-size: 0.8rem;
+  font-size: .8rem;
 }
 
 footer {
-  font-size: 0.8rem;
+  font-size: .8rem;
 }
 
 .link {
-  font-size: 0.8rem;
+  font-size: .8rem;
 }
